--- a/css/page2.css
+++ b/css/page2.css
@@ -18,3 +18,22 @@ main {
   flex-direction: column;
   gap: 2%;
 }
+
+@media (width<1000px) {
+  .products {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media (width<=650px) {
+  .products {
+    grid-template-columns: 1fr 1fr;
+  }
+  main {
+    display: block;
+  }
+  .scrollbar {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
