--- a/css/page2.css
+++ b/css/page2.css
@@ -6,11 +6,11 @@ header {
   padding: 10px 20px 10px 20px;
   margin-bottom: 2%;
 }
+
 .logo {
   height: 90px; /* Высота логотипа */
-  margin-left: 3%;
-  margin-bottom: 10px;
 }
+
 nav {
   display: flex;
   gap: 20px;
@@ -22,12 +22,12 @@ nav a {
   font-weight: bold;
 }
 nav a:hover {
-  color: #e8d5ad;
+  color: #f4c5b0;
 }
 .cerb img {
   margin-left: 5px; /* Отступ между текстом и изображением */
   transition: fill 0.3s; /* Плавный переход для цвета SVG */
-  fill: white;
+  fill: #000000;
 }
 .cerb:hover img {
   filter: brightness(0) invert(0.8); /* Отключение инверсии, чтобы цвета подходили */
@@ -36,6 +36,7 @@ nav a:hover {
   display: flex;
   align-items: center;
   gap: 10px;
+  color: #000000;
 }
 
 .footer {
@@ -119,18 +120,23 @@ nav a:hover {
   top: 60px; /* Расположено под менюшкой */
   width: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  color: black;
+  color: #000000;
 }
 
-/* Показать меню при активации */
 .nav-menu.active {
   display: block;
 }
 
+.men {
+  display: none;
+}
+
+/* основные стили */
+
 .body {
   font-family: "Crimson Text", serif;
-  margin: 0;
   padding: 0;
+  margin: 0;
 }
 
 main {
@@ -380,9 +386,16 @@ main {
     text-align: center;
     border-bottom: 2px solid #dedede;
   }
+  .men {
+    display: block;
+  }
+
+  header {
+    display: none;
+  }
 }
 
-@media (width<930px) {
+@media (width<960px) {
   .footer {
     gap: 10%;
     font-size: 22px;
@@ -407,19 +420,5 @@ main {
     width: 100%; /* Каждая секция будет занимать всю ширину */
     margin-left: 10%; /* Уменьшает отступы между секциями */
     margin-right: 10%;
-  }
-
-  .men {
-    display: block;
-  }
-
-  header {
-    display: none;
-  }
-}
-
-@media (min-width: 500px) {
-  .men {
-    display: none;
   }
 }
