--- a/css/page2.css
+++ b/css/page2.css
@@ -1,14 +1,16 @@
+/* header и бургер меню */
+
 header {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #b264e2; /* Фиолетовый цвет */
+  background-color: #b264e2;
   padding: 10px 20px 10px 20px;
   margin-bottom: 2%;
 }
 
 .logo {
-  height: 90px; /* Высота логотипа */
+  height: 90px;
 }
 
 nav {
@@ -22,18 +24,22 @@ nav a {
   font-weight: bold;
   color: white;
 }
+
 nav a:hover {
   color: #e8d5ad;
 }
+
 .cerb img {
   margin-left: 5px;
   transition: fill 0.3s;
   fill: white;
 }
+
 .cerb:hover img {
   filter: invert(5%) sepia(8%) saturate(1458%) hue-rotate(323deg)
     brightness(91%) contrast(101%);
 }
+
 .cerb {
   display: flex;
   align-items: center;
@@ -42,8 +48,8 @@ nav a:hover {
 
 .footer {
   margin-top: 10%;
-  background-color: #62208a; /* Фиолетовый фон */
-  color: white; /* Цвет текста */
+  background-color: #62208a;
+  color: white;
   display: flex;
   text-align: start;
   justify-content: space-around;
@@ -75,7 +81,7 @@ nav a:hover {
 }
 
 .footer-section a {
-  color: white; /* Цвет ссылок */
+  color: white;
   text-decoration: none;
 }
 
@@ -84,16 +90,16 @@ nav a:hover {
 }
 
 .social-icons a {
-  margin-right: 2%; /* Отступы между иконками */
+  margin-right: 2%;
 }
 
 .social-icons img {
-  width: 50px; /* Размер иконок соцсетей */
+  width: 50px;
   height: 50px;
 }
 
 .burger-menu {
-  background-color: #b264e2; /* Цвет верхней панели */
+  background-color: #b264e2;
   padding: 10px;
   position: fixed;
   width: 100%;
@@ -117,13 +123,13 @@ nav a:hover {
 }
 
 .nav-menu {
-  display: none; /* Скрыто по умолчанию */
+  display: none;
   background-color: white;
   position: absolute;
   padding-left: 3%;
   padding-right: 3%;
   padding-top: 40px;
-  top: 40px; /* Расположено под менюшкой */
+  top: 40px;
   width: 100%;
   height: 100%;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
@@ -136,26 +142,33 @@ nav a:hover {
   gap: 10px;
   color: #000000;
 }
+
 .line {
   margin-bottom: 7px;
   width: 80%;
 }
+
 .strela {
   position: absolute;
   left: 75%;
 }
+
 .strela.o {
   top: 50px;
 }
+
 .strela.t {
   top: 105px;
 }
+
 .strela.th {
   top: 162px;
 }
+
 .strela.f {
   top: 218px;
 }
+
 .negr:hover {
   color: #e8d5ad;
 }
@@ -163,6 +176,7 @@ nav a:hover {
 .negr img {
   filter: invert(100%);
 }
+
 .negr:hover img {
   filter: invert(5%) sepia(8%) saturate(1458%) hue-rotate(323deg)
     brightness(91%) contrast(101%);
@@ -419,20 +433,24 @@ main {
     grid-template-columns: 1fr 1fr;
     margin-bottom: 92%;
   }
+
   main {
     display: block;
   }
+
   .scrollbar {
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-bottom: 2%;
     border: none;
   }
+
   .razdel {
     padding: 2% 0;
     text-align: center;
     border-bottom: 2px solid #dedede;
   }
+
   .men {
     display: block;
   }
@@ -449,9 +467,11 @@ main {
   .footer {
     font-size: 22px;
   }
+
   .footer-section p {
     font-size: 24px;
   }
+
   .social-icons img {
     width: 35px; /* Размер иконок соцсетей */
     height: 35px;
@@ -483,6 +503,7 @@ main {
   .products {
     margin-bottom: 110%;
   }
+
   .modal-order-button,
   .btn {
     padding: 6px 10px;
