--- a/css/page2.css
+++ b/css/page2.css
@@ -1,3 +1,22 @@
+body {
+  margin: 0;
+  height: 100%;
+  font-family: "Montserrat", sans-serif;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
+
+article {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+}
+
 /* header и бургер меню */
 header {
   display: flex;
@@ -55,6 +74,7 @@ nav a:hover {
   justify-content: space-around;
   padding: 0 1%;
   font-size: 24px;
+  z-index: 9;
 }
 
 .footer-section {
@@ -193,12 +213,6 @@ nav a:hover {
 
 /* основные стили */
 
-.body {
-  font-family: "Crimson Text", serif;
-  padding: 0;
-  margin: 0;
-}
-
 main {
   display: flex;
   gap: 0.5%;
@@ -231,6 +245,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 2%;
+  grid-template-rows: auto;
   margin: 0 1%;
 }
 
@@ -415,7 +430,6 @@ main {
 @media (width<1000px) {
   .products {
     grid-template-columns: 1fr 1fr 1fr;
-    margin-bottom: 20%;
   }
 }
 
@@ -450,7 +464,6 @@ main {
 @media (width<=755px) {
   .products {
     grid-template-columns: 1fr 1fr;
-    margin-bottom: 92%;
   }
 
   main {
@@ -508,10 +521,6 @@ main {
     font-size: smaller;
   }
 
-  .products {
-    margin-bottom: 100%;
-  }
-
   .footer-section {
     width: 90%;
     margin: auto;
@@ -519,10 +528,6 @@ main {
 }
 
 @media (width<430px) {
-  .products {
-    margin-bottom: 110%;
-  }
-
   .modal-order-button,
   .btn {
     padding: 6px 10px;
