--- a/css/page2.css
+++ b/css/page2.css
@@ -242,12 +242,15 @@ main {
 }
 
 .products {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  gap: 2%;
-  grid-template-rows: auto;
-  margin: 0 1%;
-}
+    /* display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: auto;
+    gap: 2%;
+    margin: 0 1%; */
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 16px; /* пространство между элементами */
+  }
 
 /*Модалки*/
 .modal {
