--- a/css/page2.css
+++ b/css/page2.css
@@ -4,6 +4,10 @@ body {
   font-family: "Montserrat", sans-serif;
 }
 
+body.no-scroll {
+    overflow: hidden;
+}
+
 header {
   display: flex;
   align-items: center;
