--- a/css/sportpages.css
+++ b/css/sportpages.css
@@ -2,8 +2,8 @@ body {
   margin: 0;
   height: 100%;
   font-family: "Source Serif 4", serif;
+  overflow-x: hidden;
 }
-
 main {
   width: 80%;
   margin: 0 auto;
@@ -15,322 +15,4 @@ h1 {
   padding-bottom: 1%;
   width: 30%;
   font-family: "Montserrat", sans-serif;
-}
-
-body.no-scroll {
-  overflow: hidden;
-}
-
-header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background-color: #3693d7;
-  padding: 10px 10px;
-  width: 100%;
-  font-family: "Montserrat", sans-serif;
-}
-
-.logo {
-  height: 90px; /* Высота логотипа */
-}
-
-nav {
-  display: flex;
-  gap: 60px;
-}
-
-nav a {
-  text-decoration: none;
-  font-size: 24px;
-  font-weight: bold;
-  color: white;
-}
-
-nav a:hover {
-  color: #08003b;
-}
-
-.cerb img {
-  margin-left: 5px;
-  transition: fill 0.3s;
-  fill: white;
-}
-
-footer {
-  margin-top: 2%;
-  background-color: #08003b;
-  color: white;
-  width: 100%;
-  display: flex;
-  text-align: start;
-  justify-content: space-around;
-  padding: 0 1%;
-  font-size: 24px;
-}
-
-.footer-section {
-  margin: 0;
-  margin-bottom: 10px;
-}
-
-.footer-section p {
-  font-weight: bold;
-  font-size: 28px;
-  text-decoration: underline;
-  margin: 3% 0;
-}
-
-.footer-section ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 3% 0;
-}
-
-.footer-section li {
-  margin: 3px 0;
-  opacity: 70%;
-}
-
-.footer-section a {
-  color: white;
-  text-decoration: none;
-}
-
-.footer-section a:hover {
-  text-decoration: underline;
-}
-
-.social-icons a {
-  margin-right: 2%;
-}
-
-.social-icons img {
-  width: 50px;
-  height: 50px;
-}
-
-.burger-menu {
-  background-color: #3693d7;
-  padding: 10px;
-  position: fixed;
-  width: 100%;
-}
-
-.menu-icon {
-  cursor: pointer;
-  display: flex;
-  flex-direction: column;
-  width: 30px;
-  height: 20px;
-  justify-content: space-around;
-  margin: 0 auto;
-  padding-left: 80%;
-}
-
-.bar {
-  height: 3px;
-  background-color: white;
-  transition: 0.3s;
-}
-
-.nav-menu {
-  display: none; /* Скрыто по умолчанию */
-  background-color: white;
-  position: absolute;
-  padding-left: 3%;
-  padding-right: 3%;
-  padding-top: 40px;
-  top: 40px; /* Расположено под менюшкой */
-  width: 100%;
-  height: 100%;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  position: fixed;
-}
-
-.negr {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-  color: #08003b;
-}
-
-.line {
-  margin-bottom: 7px;
-  width: 80%;
-}
-
-.strela {
-  position: absolute;
-  left: 75%;
-}
-
-.strela {
-  position: absolute;
-  margin-left: 0%;
-}
-
-.negr:hover {
-  color: #3693d7;
-}
-
-.negr:hover img {
-  filter: invert(30%) sepia(9%) saturate(6147%) hue-rotate(339deg)
-    brightness(97%) contrast(92%);
-}
-
-.nav-menu.active {
-  display: block;
-}
-
-.men {
-  display: none;
-  font-family: "Montserrat", sans-serif;
-}
-
-article {
-  min-height: 100%;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-  grid-template-columns: 100%;
-}
-
-@media (width<1000px) {
-  .products {
-    grid-template-columns: 1fr 1fr 1fr;
-  }
-}
-
-@media (width<880px) {
-  .scrollbar {
-    font-size: smaller;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .modal-content {
-    width: 95%;
-    margin: 5% auto;
-  }
-
-  .knop {
-    align-items: center;
-  }
-
-  .modal-body {
-    flex-direction: column;
-    align-items: stretch;
-  }
-
-  .modal-image {
-    max-width: 100%;
-    margin-right: 0;
-    margin-bottom: 20px;
-  }
-
-  .modal-details {
-    text-align: center;
-  }
-}
-
-@media (width<=755px) {
-  .products {
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
-  }
-
-  main {
-    display: block;
-  }
-
-  .scrollbar {
-    display: grid;
-    grid-template-columns: 1fr;
-    margin-bottom: 2%;
-    border: none;
-  }
-
-  .razdel {
-    padding: 2% 0;
-    text-align: center;
-    border-bottom: 2px solid #dedede;
-  }
-
-  .men {
-    display: block;
-  }
-
-  header {
-    display: none;
-  }
-
-  .cerb {
-    color: #000000;
-  }
-
-  .category-header {
-    font-size: 18px;
-  }
-
-  .subcategory-item {
-    font-size: 16px;
-  }
-
-  .sorting button {
-    font-size: 20px;
-  }
-
-  .slide {
-    margin-left: 5%;
-    border: 2px solid #62208a;
-    border-radius: 20px;
-    padding-left: 8%;
-    padding-top: 5%;
-  }
-}
-
-@media (width<960px) {
-  .footer {
-    font-size: 22px;
-  }
-
-  .footer-section p {
-    font-size: 24px;
-  }
-
-  .social-icons img {
-    width: 35px; /* Размер иконок соцсетей */
-    height: 35px;
-  }
-}
-
-@media (width<580px) {
-  .footer {
-    flex-direction: column;
-  }
-
-  .stolbi {
-    flex-direction: column;
-  }
-
-  .footer p,
-  ul {
-    margin: 1.5% 0;
-    font-size: smaller;
-  }
-
-  .footer-section {
-    width: 90%;
-    margin: auto;
-  }
-}
-
-@media (width<430px) {
-  .modal-order-button,
-  .btn {
-    padding: 6px 10px;
-    border-radius: 8px;
-    min-width: 160px;
-    min-height: 40px;
-  }
 }
